Fixed css for DiaFlux flowchart in denkbares. * Hover does not longer remove borders but makes them transparent (rest of page moved up and down a few pixels because of that). * Moved border completing the grid to right div. * Background color no longer changes on hover (didn't look nice anyway, because only a small part of the background was visible due to grid).

--- a/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/skins/denkbares/skin.css
+++ b/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/skins/denkbares/skin.css
@@ -1809,10 +1809,8 @@ div.coverflow .knob {
 }
 
 .type_DiaFlux.defaultMarkupFrame:hover {
-	border-right: 0px;
-	border-left: 1px solid transparent;
-	border-bottom: 0px;
-	margin-bottom: 0px;	
+	border: 1px solid transparent;
+	background: transparent;
 }
 
 .defaultMarkup .markupText .FlowchartGroup {
@@ -1826,11 +1824,13 @@ div.coverflow .knob {
 }
 
 .type_DiaFlux.defaultMarkupFrame > .defaultMarkup {
-	border-right: 1px solid #D1CFF1;
-	border-bottom: 1px solid #D1CFF1;
-	border-left: 1px solid #D1CFF1;
-	border-top: 1px solid #D1CFF1;
 	overflow-y: hidden;
+}
+
+.Flowchart {
+	border-top: 1px solid #D1CFF1;
+	border-left: 1px solid #D1CFF1;
+	border-right: 1px solid #D1CFF1;
 }
 
 .defaultMarkupFrame {
